Fix: Fix alignments

--- a/styles.css
+++ b/styles.css
@@ -53,12 +53,19 @@ body {
   min-height: 100vh;
   font-family: "Playfair Display", serif;
   text-align: center;
+  color: var(--blue);
+  background-color: var(--light);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: var(--blue);
-  background-color: var(--light);
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 header {
@@ -66,7 +73,8 @@ header {
 }
 
 header .title {
-  font-size: 4rem;
+  font-size: 5rem;
+  font-style: italic;
   color: var(--red);
   padding-bottom: 1rem;
 }
@@ -75,45 +83,51 @@ header .title {
   display: flex;
   justify-content: center;
   align-items: center;
+  vertical-align: middle;
   gap: 1rem;
 }
 
 .subtitle h2 {
-  font-size: 2.5rem;
-  font-style: italic;
+  font-size: 3rem;
 }
 
 .date-svg {
-  height: 32px;
-  width: 32px;
+  height: 3rem;
+  width: 3.5rem;
 }
 
 .divider {
-  margin: 1rem auto;
+  margin: 1.5rem auto 0;
   padding: 0.5rem;
   background-color: var(--red);
 }
 
 .dropdown-container {
+  width: 100%;
   position: relative;
-  margin: 0 1rem 1rem;
+  padding: 0.5rem 1rem;
 }
 
 select {
   background-color: whitesmoke;
+  color: var(--blue);
+  font-weight: 500;
   border: 0.25rem solid var(--red);
   width: 100%;
   height: 3rem;
   font-size: 100%;
   cursor: pointer;
   border: 0.1rem solid var(--blue);
-  border-radius: 0.5rem;
   appearance: none;
   padding: 0.5rem;
   -webkit-appearance: none;
   -moz-appearance: none;
   transition: color 0.3s ease, background-color 0.3s ease,
     border-bottom-color 0.3s ease;
+}
+
+select:focus {
+  outline: none;
 }
 
 .select-icon {
@@ -133,8 +147,9 @@ select {
 }
 
 #current-date {
+  padding: 1rem;
   font-size: 2rem;
-  text-align: center;
+  font-weight: 700;
 }
 
 @media (max-width: 375px) {
